--- a/src/MYP.API/appsettings.json
+++ b/src/MYP.API/appsettings.json
@@ -1,9 +1,36 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "JwtSettings": {
+    "Secret": "",
+    "Issuer": "MYP",
+    "Audience": "MYP",
+    "ExpirationInMinutes": 15,
+    "RefreshTokenExpirationInDays": 7
+  },
+  "Cors": {
+    "AllowedOrigins": []
+  },
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
   },
   "AllowedHosts": "*"
 }
