--- a/tests/MYP.Infrastructure.Tests/MYP.Infrastructure.Tests.csproj
+++ b/tests/MYP.Infrastructure.Tests/MYP.Infrastructure.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Bogus" Version="35.6.5" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="4.10.0" />
