feat(auth): add AuthController with integration tests
- Add AuthController with register, login, refresh, and me endpoints
- Configure JWT authentication in DependencyInjection
- Add Authentication middleware to request pipeline
- Update CustomWebApplicationFactory for proper test isolation
- Add AuthControllerTests for all endpoints

--- a/src/MYP.API/appsettings.json
+++ b/src/MYP.API/appsettings.json
@@ -6,8 +6,8 @@
     "Secret": "",
     "Issuer": "MYP",
     "Audience": "MYP",
-    "ExpirationInMinutes": 15,
-    "RefreshTokenExpirationInDays": 7
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
   },
   "Cors": {
     "AllowedOrigins": []
